Create-AKS-Cluster/helm-charts-ingress/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - vault.kishorekumar.online
    secretName: vault-tls
  rules:
  - host: vault.kishorekumar.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault-service
            port:
              number: 8200
